<resources>
    <string name="app_name">开沃DMS</string>
    <string name="username">用户名</string>
    <string name="pass">密码</string>
    <string name="login">登录</string>
    <string name="role">岗位</string>
    <string name="home">首页</string>
    <string name="order">订单审核</string>
    <string name="modify">更改函审核</string>
    <string name="pages">页数:</string>
    <string name="query">查询</string>
    <string name="add">新增</string>
    <string name="order_number">订单号</string>
    <string name="customer">客户</string>
    <string name="custom2">客户:</string>
    <string name="custom">客户</string>
    <string name="customer_name">客户名称</string>
    <string name="customer_name2">客户名称:</string>
    <string name="month_num">月报编号</string>
    <string name="week_num">周报编号</string>
    <string name="day_num">日报编号</string>
    <string name="year">年份</string>
    <string name="year2">年度:</string>
    <string name="visit_time">走访时间:</string>
    <string name="sign_date">签单日期:</string>
    <string name="sign_date2">签单日期</string>
    <string name="time">时间:</string>
    <string name="time2">时间</string>
    <string name="day_report_date">日报日期:</string>
    <string name="day_report_date2">日报日期</string>
    <string name="sub_date">提交日期:</string>
    <string name="sub_date2">提交日期</string>
    <string name="to">至:</string>
    <string name="month">月份</string>
    <string name="week">周</string>
    <string name="week2">周:</string>
    <string name="month2">月份:</string>
    <string name="model">车型</string>
    <string name="model_d">车型:</string>
    <string name="operation">操作</string>
    <string name="pass_btn">通过</string>
    <string name="submit">提交</string>
    <string name="submitted">已提交</string>
    <string name="no_used">已作废</string>
    <string name="no_submit">未提交</string>
    <string name="submit_man">提交人:</string>
    <string name="submit_man2">提交人</string>
    <string name="save">保存</string>
    <string name="return_back">驳回</string>
    <string name="back">返回</string>
    <string name="return_success">驳回成功</string>
    <string name="choose_model">请选择车型</string>
    <string name="choose_car_no">请选择出厂编号</string>
    <string name="sub_success">提交成功</string>
    <string name="loading">正在加载</string>
    <string name="upload">正在上传</string>
    <string name="loaded">下载完成</string>
    <string name="cached">缓存完成</string>
    <string name="save_file">请先保存文件</string>
    <string name="save_info">请先保存信息</string>
    <string name="save_info_success">保存信息成功</string>
    <string name="save_page_one_info">请先保存第一页信息</string>
    <string name="save_file_success">文件保存成功</string>
    <string name="add_success">新增成功</string>
    <string name="do_success">操作成功</string>
    <string name="add_failed">添加失败</string>
    <string name="failed">请求失败</string>
    <string name="sub_file_success">文件上传成功</string>
    <string name="check_info">请检查信息是否有误</string>
    <string name="sub_info_success">信息提交成功</string>
    <string name="no_click">无法修改</string>
    <string name="add_file">请添加文件</string>
    <string name="finish_info">请填写完整信息</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_success_refresh">删除成功，请刷新</string>
    <string name="modify_success">修改成功</string>
    <string name="latest_version">已是最新版本</string>
    <string name="update_version">更新</string>
    <string name="cancel">取消</string>
    <string name="version_info">出现新的版本，是否更新?</string>
    <string name="fill_contract">请选择合同号</string>
    <string name="sure_delete">是否确定删除?</string>
    <string name="delete">删除</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="pay_method">付款方式:</string>
    <string name="compete_factory">竞争厂家:</string>
    <string name="compete_factory2">竞争厂家</string>
    <string name="sale_price">销售价格(万元):</string>
    <string name="deal_rate">成交率:</string>
    <string name="deal_price">成交价格(万元):</string>
    <string name="visit_customer">拜访客户职位/名称:</string>
    <string name="dealer">直/经销:</string>
    <string name="accept_price">接受价格(万元):</string>
    <string name="ck_order_sub">订单提报</string>
    <string name="month_manage">月报管理</string>
    <string name="day_manage">日报管理</string>
    <string name="area_com">区域竞品管理</string>
    <string name="area_com_num">竞品编号</string>
    <string name="area_com_review">区域竞品审核</string>
    <string name="month_review">月报审核</string>
    <string name="week_review">周报审核</string>
    <string name="day_review">日报审核</string>
    <string name="week_manage">周报管理</string>
    <string name="custom_file">客户档案</string>
    <string name="ck_change_letter_sub">更改函提报</string>
    <string name="ck_order_add">订单填写</string>
    <string name="ck_change_letter_id">变更函号</string>
    <string name="change_letter_id">变更函号:</string>
    <string name="ck_allocation_new_energy">新能源</string>
    <string name="ck_under_pan">底盘</string>
    <string name="ck_car_body">车身</string>
    <string name="ck_electric_appliance">电器</string>
    <string name="ck_self_define">自定义</string>
    <string name="choose_contract">请选择合同信息</string>
    <string name="phone">手机:</string>
    <string name="phone2">手机</string>
    <string name="link_method">联系方式:</string>
    <string name="link_man">联系人</string>
    <string name="link_man2">联系人:</string>
    <string name="duty">职务:</string>
    <string name="duty2">职务</string>
    <string name="type">类型:</string>
    <string name="type2">类型</string>
    <string name="hobby">爱好:</string>
    <string name="coach_type">客车类型:</string>
    <string name="coach_type2">客车类型</string>
    <string name="coach_length">客车长度:</string>
    <string name="coach_length2">客车长度</string>
    <string name="brand">品牌:</string>
    <string name="brand2">品牌</string>
    <string name="holdings">保有量:</string>
    <string name="holdings2">保有量</string>
    <string name="buy_year">购买年份:</string>
    <string name="buy_year2">购买年份</string>
    <string name="name">姓名</string>
    <string name="remark2">备注(品牌/车型/付款方式等)</string>
    <string name="remark3">备注</string>
    <string name="review_time">审核时间</string>
    <string name="preview_effect">预期效果</string>
    <string name="other_work">其他工作汇报</string>
    <string name="other_work2">其他工作</string>
    <string name="other_work3">其他工作:</string>
    <string name="review_man">审核人</string>
    <string name="review_result">审核结果</string>
    <string name="visit_man">拜访人员:</string>
    <string name="sign_car">签单车型:</string>
    <string name="sign_num">签单数量:</string>
    <string name="drop_cause">丢单原因:</string>
    <string name="visit_intent">拜访意图:</string>
    <string name="visit_intent2">拜访意图</string>
    <string name="product_need">产品需求:</string>
    <string name="visit_result">拜访成果:</string>
    <string name="report_sub">日报提报</string>
    <string name="after_report_sub">售后日报提报</string>
    <string name="report_id">日报编号</string>
    <string name="report_num">日报编号:</string>
    <string name="report_info">日报信息</string>
    <string name="attach_sub">附件上传</string>
    <string name="attach_preview">附件预览</string>
    <string name="report_fill">日报填写</string>
    <string name="next_month_target">下月保底指标:</string>
    <string name="next_month_fight">下月奋斗指标:</string>
    <string name="month_sold_num">本月销售台数:</string>
    <string name="year_sold_num">年度积累销售台数:</string>
    <string name="last_month_target">上月保底指标:</string>
    <string name="last_month_fight">上月奋斗指标:</string>
    <string name="month_work_condition">本月工作完成情况</string>
    <string name="next_month_work_condition">下月重点工作内容</string>
    <string name="week_plan">周工作计划</string>
    <string name="week_time">周工作时间</string>
    <string name="work_content">工作内容:</string>
    <string name="schedule">日程:</string>
    <string name="schedule2">日程</string>
    <string name="work_result">工作效果:</string>
    <string name="work_content2">工作内容</string>
    <string name="work_describe">工作描述:</string>
    <string name="work_describe2">工作描述</string>
    <string name="work_result2">工作效果</string>
    <string name="expect_result">预期效果</string>
    <string name="expect_result2">预期效果:</string>
    <string name="back_date">反馈日期:</string>
    <string name="model_series">车型系列:</string>
    <string name="factory_id">出厂编号:</string>
    <string name="vin">底盘VIN码:</string>
    <string name="get_license_date">上牌日期:</string>
    <string name="drive_miles">行驶里程:</string>
    <string name="break_down_description">故障描述:</string>
    <string name="produce_date">生产日期:</string>
    <string name="solve_process">处理过程:</string>
    <string name="solve_result">处理结果:</string>
    <string name="duty_type">责任分类:</string>
    <string name="first_trouble_thing_name">首祸故障件名称:</string>
    <string name="trouble_thing_factory">故障件厂家:</string>
    <string name="auto_out">自动带出:</string>
    <string name="scan">浏览:</string>
    <string name="car_name_plate">整车铭牌</string>
    <string name="trouble_thing_picture">故障件照片</string>
    <string name="after_repair_pic">修复后照片</string>
    <string name="else_pic">其他</string>
    <string name="video">相关视频</string>
    <string name="city_car">城市客车</string>
    <string name="between_city_car">城间客车</string>
    <string name="full_filled">请完成必填信息</string>
    <string name="need_custom_id">请完成客户信息新建</string>
    <string name="need_remark">请填写备注</string>
    <string name="need_nature">请完填写性质</string>
    <string name="need_province">请填写省</string>
    <string name="need_city">请填写市</string>
    <string name="need_">请完成必填信息</string>
    <string name="need_name">请填写名称</string>
    <string name="need_name2">请选择客户信息</string>
    <string name="need_phone">请填写联系方式</string>
    <string name="too_many">已达到最大</string>
    <string name="choose">选取</string>
    <string name="video_tape">拍摄</string>
    <string name="report_detail">质量日报管理</string>
    <string name="report_query">质量日报查询</string>
    <string name="after_report_query">售后日报查询</string>
    <string name="car_id">车牌号</string>
    <string name="car_num">车牌号:</string>
    <string name="big_pic">大图</string>
    <string name="preview">预览</string>
    <string name="load">下载</string>
    <string name="review_number">合同号</string>
    <string name="mm_order_title">订单审核</string>
    <string name="mm_order_review">订单审批</string>
    <string name="mm_contract_review">合同审批</string>
    <string name="mm_contract_sheet_review">合同评审表审核</string>
    <string name="mm_change_letter_review">更改函审批</string>
    <string name="mm_change_bill_review">更改单审批</string>
    <string name="mm_allocation_change_bill_review">配置更改单审批</string>
    <string name="mm_order_area">区域</string>
    <string name="area">区域:</string>
    <string name="mm_order_ck">业务员</string>
    <string name="order_ck">业务员:</string>
    <string name="custom_property">客户性质:</string>
    <string name="custom_property2">客户性质</string>
    <string name="mm_order_number">订单号:</string>
    <string name="custom_type">客户类型:</string>
    <string name="custom_level">客户级别:</string>
    <string name="custom_type2">客户类型</string>
    <string name="custom_level2">客户级别</string>
    <string name="mm_order_client">客户:</string>
    <string name="mm_order_model">车型:</string>
    <string name="mm_order_state">状态:</string>
    <string name="mm_for_review_text">未提交</string>
    <string name="mm_turn_down_text">驳回</string>
    <string name="mm_reviewing_text">审核中</string>
    <string name="mm_passed_text">已审核</string>
    <string name="mm_order_detail">订单明细</string>
    <string name="allocation_table_title_project_name">项目名称</string>
    <string name="allocation_table_title_sysytem">系统</string>
    <string name="allocation">配置</string>
    <string name="allocation_table_title_num">数量</string>
    <string name="allocation_table_title_remark">备注</string>
    <string name="remark">备注:</string>
    <string name="allocation_pro">配置项目</string>
    <string name="change_content">更改内容</string>
    <string name="man_hour">工时费</string>
    <string name="mm_contract_id">合同号</string>
    <string name="contract_price">合同价格</string>
    <string name="price">价格</string>
    <string name="num">数量</string>
</resources>