<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btn_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cic_edt_back"
        android:text="@string/preview" />

    <Button
        android:id="@+id/btn_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cic_edt_back"
        android:text="@string/load" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cic_edt_back"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cic_edt_back"
        android:text="@string/choose"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_video_tape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cic_edt_back"
        android:text="@string/video_tape"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cic_edt_back"
        android:text="@string/cancel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp" />
</LinearLayout>