<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:gravity="center"
    android:background="@color/titleBackColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/mm_contract_id" />

        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/customer_name" />

        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/model" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/num" />

        <TextView
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/contract_price" />
    </LinearLayout>
</LinearLayout>