<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/titleBackColor"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/allocation_table_title_project_name"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/allocation"
            android:textColor="@color/colorWhite" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/allocation_table_title_num"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/allocation_table_title_remark"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>