<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_un_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mm_for_review_text"
            android:textColor="@color/colorRedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/mm_turn_down_text"
            android:textColor="@color/colorOrange" />

        <TextView
            android:id="@+id/txt_reviewing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/mm_reviewing_text"
            android:textColor="@color/colorBlue" />

        <TextView
            android:id="@+id/txt_reviewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/mm_passed_text"
            android:textColor="@color/colorGreen" />
    </LinearLayout>
</LinearLayout>