<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/mm_turn_down_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/mm_reviewing_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/mm_passed_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>