<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:gravity="center_vertical"
    android:background="@color/titleBackColor"
    android:orientation="vertical">

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@color/colorBlack" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<TextView-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBlack" />-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/report_id"
            android:textColor="@color/colorWhite" />

        <!--<TextView-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBlack" />-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/model"
            android:textColor="@color/colorWhite" />

        <!--<TextView-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBlack" />-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/car_id"
            android:textColor="@color/colorWhite" />

        <!--<TextView-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBlack" />-->

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/mm_order_state"
            android:textColor="@color/colorWhite" />

        <!--<TextView-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBlack" />-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/operation"
            android:textColor="@color/colorWhite" />

        <!--<TextView-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBlack" />-->
    </LinearLayout>
    <!--<TextView-->
    <!--android:background="@color/colorBlack"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp" />-->
</LinearLayout>